sample/msvc/error/c2238.cpp
// C2238.cpp
// compile with: /c
class v {
virtual: int vvv;   // C2238
};
